--- a/1.html
+++ b/1.html
@@ -7,35 +7,27 @@
  * @param {number[]} nums
  * @return {void} Do not return anything, modify nums in-place instead.
  */
-var sortColors = function(nums) {
-    sort(nums, 0, nums.length-1);
-    console.log(nums);
-};
+ var largestNumber = function(nums) {
+     nums.forEach(function(value, index) {
+         nums[index] = "" + value;
+     });
+     nums.sort(function(s1, s2) {
+         if (s1 + s2 > s2 + s1) {
+           return -1;
+         } else if (s1 + s2 < s2 + s1) {
+           return 1;
+         } else {
+           return 0;
+         }
 
-var sort = function(array, low, high) {
-    var lt = low, gt = high;
-    var i = low + 1;
-    var target = array[low];
+     });
 
-    if (high <= low) return;
-    while (i <= gt) {
-        if (array[i] < target) {
-            exchange(array, i++, lt++);
-        } else if (array[i] > target) {
-            exchange(array, i, gt--);
-        } else {
-            i++;
-        }
-    }
-    sort(array, low, lt - 1);
-    sort(array, gt + 1, high);
-}
-var exchange = function(arr, i, j) {
-    var t = arr[i];
-    arr[i] = arr[j];
-    arr[j] = t;
-}
-sortColors([0,1]);
+     var result = nums.join("");
+     if (nums[0] === 0 && nums.length > 0) result = '0';
+     console.log(result);
+     return result;
+ };
+ largestNumber([11,23,54,9,78,80,94,35,52,14,19,84,35,36,9,70]);
   </script>
 </body>
 </html>
