--- a/1.html
+++ b/1.html
@@ -7,27 +7,26 @@
  * @param {number[]} nums
  * @return {void} Do not return anything, modify nums in-place instead.
  */
- var largestNumber = function(nums) {
-     nums.forEach(function(value, index) {
-         nums[index] = "" + value;
+ var hIndex = function(citations) {
+     if (citations.length === 0) return 0;
+
+     var len = citations.length, result;
+     citations.sort(function(a, b) {
+         return (b - a);
      });
-     nums.sort(function(s1, s2) {
-         if (s1 + s2 > s2 + s1) {
-           return -1;
-         } else if (s1 + s2 < s2 + s1) {
-           return 1;
-         } else {
-           return 0;
+
+     if (citations[len - 1] > len) return 0;
+
+     for (var i = 0; i < len; i++) {
+         if (citations[i] <= i+1) {
+             result = citations[i];
+             break;
          }
-
-     });
-
-     var result = nums.join("");
-     if (nums[0] === 0 && nums.length > 0) result = '0';
+     }
      console.log(result);
      return result;
  };
- largestNumber([11,23,54,9,78,80,94,35,52,14,19,84,35,36,9,70]);
+ hIndex([3, 0, 6, 1, 5，43，4，7，6，1，2，8，4，5，6，8，9，11，3]);
   </script>
 </body>
 </html>
